  Closes bug #224 (CreationDate and ModDate fields are missing)
* If the output from user-defined tool is pnm, there is no way to tell the
  resolution, so assume that it is the same as the input.
  Closes bug #227 (Page size corruption in 1.5.1)
* Support hand-scanner option in test backend. Closes bug #223
  ("Auto length detection" option does not work with ScanSnap IX500)
* Update to Slovak translation (thanks to Dusan Kazik)


1.5.1 (26.07.2016):

* Fix "Can't use string ("gimp %i") as an ARRAY ref"
  Closes bug #222 (Error when run gscan2pdf 1.5)
  Closes Debian bug #831597 (Can't use string ("gimp %i") as an ARRAY ref)
* Store and apply backend (scanner-specific) and gscan2pdf settings separately.
* Those frontend settings stored in profiles need not be stored in general
  settings.
* When paper in use, hide other geometry widgets
* When saving profile, if name already exists,
  add warning and don't duplicate the combobox text


1.5.0 (11.06.2016):

* Also import text layer when importing PDF or DjVu.
* + option in Edit/Preference to allow/forbid batch scanning from a flatbed
* Store date as string to avoid time zone problems
  Closes Debian bug #823626 (Date in file name off by one day when saving)
* Show warning when importing a PDF if number of images is not equal to number
  of pages.
* + option not to close save dialog.
  Closes feature request #91 (Keep save dialoque open)
* Update to Occitan (post 1500) translation (thanks to Cédric VALMARY)


1.4.0 (14.04.2016):

* Fixed double file overwrite confirmation
* Update paper size combobox after setting profile
* Integrate user-defined tools into scan post-process
* + dialog window for user-defined tools
* Fixed extended page numbering toggle
* Fixed restoring crashed session
* Fixed paper sizes after switching device. Closes bug #216
  (options for A4, US Legal, and US Letter have disappeared in the Geometry
   options for Scansnap IX500 in 1.3.9)
* Correct hiding/showing of widgets when saving JPEG