@@ -1,6 +1,7 @@
 gscan2pdf (1.5.2-1) unstable; urgency=low
 
   * New upstream release
+    Closes: #833521 (unpaper AVStream codec deprecation warning)
 
  --
 
