@@ -12,6 +12,8 @@
   Closes bug #227 (Page size corruption in 1.5.1)
 * Support hand-scanner option in test backend. Closes bug #223
   ("Auto length detection" option does not work with ScanSnap IX500)
+* Filter out double memory address from unpaper warning.
+  Closes Debian bug #833521 (unpaper AVStream codec deprecation warning)
 * Update to Slovak translation (thanks to Dusan Kazik)
 
 
